Fix not showing journal actions

--- a/src/styles/components/_issues.scss
+++ b/src/styles/components/_issues.scss
@@ -121,6 +121,11 @@ a[href*="activity"][title*=":"] {
       content: none;
     }
 
+    .journal-actions {
+      position: relative;
+      z-index: 30;
+    }
+
     h4 {
       left: 20px;
       position: relative;
